Fix bug of the shaking button on iphone6+

--- a/src/styles/_action.scss
+++ b/src/styles/_action.scss
@@ -1,5 +1,5 @@
 .action {
-  height: 6em;
+  height: 8em;
   margin: 0 auto;
   text-align: center;
 }
